Fixes nav bar vertical overflow

--- a/src/Layout.css
+++ b/src/Layout.css
@@ -104,6 +104,7 @@ main h1 {
   color: #fff;
   z-index: 1000;
   box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+  height: fit-content;
 }
 
 .player-header {
